odeio JS papo reto

--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,8 @@
         </div>
 
     </div>
-
+    <input type="file" name="file" id="file">
     <script  src="script.js"></script>
 </body>
 </html>
+
